--- a/fcc_sms_text_classification.ipynb
+++ b/fcc_sms_text_classification.ipynb
@@ -81,16 +81,16 @@
     {
       "cell_type": "code",
       "source": [
-        "tokenizer = Tokenizer(num_words=10000, oov_token=\"<OOV>\")  #num_words not necessary\n",
+        "tokenizer = Tokenizer(num_words=1000)  #num_words not necessary\n",
         "tokenizer.fit_on_texts(train_data)\n",
         "\n",
         "train_sequences = tokenizer.texts_to_sequences(train_data)\n",
         "test_sequences = tokenizer.texts_to_sequences(test_data)\n",
         "\n",
-        "max_length = 100\n",
+        "max_length = 500\n",
         "\n",
-        "train_padded = pad_sequences(train_sequences, maxlen=max_length, padding=\"post\", truncating=\"post\")\n",
-        "test_padded = pad_sequences(test_sequences, maxlen=max_length, padding=\"post\", truncating=\"post\")\n",
+        "train_padded = pad_sequences(train_sequences, maxlen=max_length)\n",
+        "test_padded = pad_sequences(test_sequences, maxlen=max_length)\n",
         "\n",
         "print(\"Train data shape:\", train_padded.shape)\n",
         "print(\"Test data shape:\", test_padded.shape)\n",
@@ -113,8 +113,8 @@
       },
       "outputs": [],
       "source": [
-        "i = tf.keras.layers.Input(shape=[100])\n",
-        "x = tf.keras.layers.Embedding(10000, 50, input_length=100)(i)\n",
+        "i = tf.keras.layers.Input(shape=[500])\n",
+        "x = tf.keras.layers.Embedding(10000, 50, input_length=500)(i)\n",
         "x = tf.keras.layers.LSTM(64)(x)\n",
         "\n",
         "x = tf.keras.layers.Dense(256, activation='relu')(x)\n",
@@ -146,7 +146,12 @@
       },
       "outputs": [],
       "source": [
-        "model.fit(train_padded, train_labels_encoded, epochs=5, batch_size=32, validation_data=(test_padded, test_labels_encoded))"
+        "#model.fit(train_padded, train_labels_encoded, epochs=5, batch_size=32, validation_data=(test_padded, test_labels_encoded))\n",
+        "model.fit(train_padded, train_labels_encoded,\n",
+        "             batch_size=128, epochs=10,\n",
+        "              validation_split=0.2,\n",
+        "              callbacks=[tf.keras.callbacks.EarlyStopping(\n",
+        "                  monitor='val_loss', min_delta=0.0001)])"
       ]
     },
     {
@@ -162,12 +167,12 @@
         "def predict_message(pred_text):\n",
         "  pred_text = [pred_text]\n",
         "\n",
-        "  tokenizer = Tokenizer(num_words=10000, oov_token=\"<OOV>\")\n",
+        "  tokenizer = Tokenizer(num_words=1000)\n",
         "\n",
         "  tokenizer.fit_on_texts(pred_text)\n",
         "\n",
         "  single_sequence = tokenizer.texts_to_sequences(pred_text)\n",
-        "  single_padded = pad_sequences(single_sequence, maxlen=100, padding='post', truncating='post')\n",
+        "  single_padded = pad_sequences(single_sequence, maxlen=500, padding='post', truncating='post')\n",
         "  print(\"Padded\",single_padded)\n",
         "\n",
         "  prediction = model.predict(single_padded)\n",
