--- a/fcc_sms_text_classification.ipynb
+++ b/fcc_sms_text_classification.ipynb
@@ -81,7 +81,7 @@
     {
       "cell_type": "code",
       "source": [
-        "tokenizer = Tokenizer(num_words=1000)  #num_words not necessary\n",
+        "tokenizer = Tokenizer(num_words=1000)\n",
         "tokenizer.fit_on_texts(train_data)\n",
         "\n",
         "train_sequences = tokenizer.texts_to_sequences(train_data)\n",
@@ -90,14 +90,7 @@
         "max_length = 500\n",
         "\n",
         "train_padded = pad_sequences(train_sequences, maxlen=max_length)\n",
-        "test_padded = pad_sequences(test_sequences, maxlen=max_length)\n",
-        "\n",
-        "print(\"Train data shape:\", train_padded.shape)\n",
-        "print(\"Test data shape:\", test_padded.shape)\n",
-        "print(\"Train labels shape:\", train_labels_encoded.shape)\n",
-        "print(\"Test labels shape:\", test_labels_encoded.shape)\n",
-        "print(\"Train labels distribution:\", np.bincount(train_labels_encoded))\n",
-        "print(\"Test labels distribution:\", np.bincount(test_labels_encoded))"
+        "test_padded = pad_sequences(test_sequences, maxlen=max_length)"
       ],
       "metadata": {
         "id": "Wf-Ft1oIThdM"
@@ -113,23 +106,13 @@
       },
       "outputs": [],
       "source": [
-        "i = tf.keras.layers.Input(shape=[500])\n",
-        "x = tf.keras.layers.Embedding(10000, 50, input_length=500)(i)\n",
-        "x = tf.keras.layers.LSTM(64)(x)\n",
-        "\n",
-        "x = tf.keras.layers.Dense(256, activation='relu')(x)\n",
-        "x = tf.keras.layers.Dropout(0.5)(x)\n",
-        "x = tf.keras.layers.Dense(1, activation='relu')(x)\n",
-        "\n",
-        "model = tf.keras.models.Model(inputs=i, outputs=x)\n",
-        "\n",
-        "#model = keras.Sequential([\n",
-        "#  keras.layers.Embedding(10000, 64, input_length=100),\n",
-        " # keras.layers.LSTM(64),\n",
-        "  #keras.layers.Flatten(),\n",
-        "  #keras.layers.Dense(64, activation='relu'),\n",
-        "  #keras.layers.Dense(1, activation='sigmoid')\n",
-        "#])\n",
+        "model = keras.Sequential([\n",
+        "  keras.layers.Embedding(10000, 50, input_length=500),\n",
+        "  keras.layers.LSTM(64),\n",
+        "  keras.layers.Dense(256, activation='relu'),\n",
+        "  keras.layers.Dropout(0.5),\n",
+        "  keras.layers.Dense(1, activation='sigmoid')\n",
+        "])\n",
         "\n",
         "model.compile(loss='binary_crossentropy',\n",
         "              optimizer='adam',\n",
@@ -146,13 +129,21 @@
       },
       "outputs": [],
       "source": [
-        "#model.fit(train_padded, train_labels_encoded, epochs=5, batch_size=32, validation_data=(test_padded, test_labels_encoded))\n",
-        "model.fit(train_padded, train_labels_encoded,\n",
-        "             batch_size=128, epochs=10,\n",
-        "              validation_split=0.2,\n",
-        "              callbacks=[tf.keras.callbacks.EarlyStopping(\n",
-        "                  monitor='val_loss', min_delta=0.0001)])"
+        "model.fit(train_padded, train_labels_encoded, epochs=5, batch_size=128, validation_split=0.2)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def preprocessing(sentence):\n",
+        "  sentence = tokenizer.texts_to_sequences(sentence)\n",
+        "  return pad_sequences(sentence, maxlen=500)"
+      ],
+      "metadata": {
+        "id": "tKMfmugnaZx5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -165,25 +156,8 @@
         "# function to predict messages based on model\n",
         "# (should return list containing prediction and label, ex. [0.008318834938108921, 'ham'])\n",
         "def predict_message(pred_text):\n",
-        "  pred_text = [pred_text]\n",
-        "\n",
-        "  tokenizer = Tokenizer(num_words=1000)\n",
-        "\n",
-        "  tokenizer.fit_on_texts(pred_text)\n",
-        "\n",
-        "  single_sequence = tokenizer.texts_to_sequences(pred_text)\n",
-        "  single_padded = pad_sequences(single_sequence, maxlen=500, padding='post', truncating='post')\n",
-        "  print(\"Padded\",single_padded)\n",
-        "\n",
-        "  prediction = model.predict(single_padded)\n",
-        "  if prediction < 0.5:\n",
-        "    predicted_label = 'ham'\n",
-        "  else:\n",
-        "    predicted_label = 'spam'\n",
-        "\n",
-        "  final_prediction= [prediction[0][0], predicted_label]\n",
-        "  print(final_prediction)\n",
-        "  return final_prediction\n",
+        "  prediction = model.predict(preprocessing(pd.Series([pred_text])))[0]\n",
+        "  return (prediction[0], (\"ham\" if prediction<0.5 else \"spam\"))\n",
         "\n",
         "pred_text = \"how are you doing today?\"\n",
         "\n",
